# Parallel_Computing_First

./: .gitignore  CMakeLists.txt  Elaborate_Results.ipynb  README.md  dynamic_schedule.py  helpers.cpp  helpersAOS.cpp  helpersSOA.cpp  inc_load.py  inc_threads.py  main.cpp  mainAOS.cpp  mainSOA.cpp  parallel_AOS.cpp  parallel_AOS_simd.cpp  parallel_AOS_simd_manual.cpp  parallel_SOA.cpp  parallel_SOA_simd.cpp  parallel_SOA_simd_manual.cpp  sequential.cpp  simAOS.cpp  simSOA.cpp
experiments_scripts/: dynamic_schedule.py  inc_load.py  inc_threads.py
src/: framegenAOS.h  helpersAOS.cpp  helpersAOS.h  helpersSOA.cpp  helpersSOA.h  parallelgenAOS.cpp  parallelgenAVX_AOS.cpp  parallelgenAVX_SOA.cpp  parallelgenSIMD_AOS.cpp  parallelgenSIMD_SOA.cpp  parallelgenSOA.cpp  sequentialgenAOS.cpp
src/AOS/: framegenAOS.h  helpersAOS.cpp  helpersAOS.h  parallelgenAOS.cpp  parallelgenAVX_AOS.cpp  parallelgenSIMD_AOS.cpp  sequentialgenAOS.cpp
src/SOA/: framegenSOA.h  helpersSOA.cpp  helpersSOA.h  parallelgenAVX_SOA.cpp  parallelgenSIMD_SOA.cpp  parallelgenSOA.cpp
